--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,11 +7,29 @@
     @tailwind base;
 
     @layer base {
+        h1 {
+            @apply font-black text-xl
+        }
         h2 {
             @apply font-bold text-lg
         }
         h3 {
             @apply font-bold text-base
+        }
+        h4 {
+            @apply font-normal text-base text-gray-500
+        }
+        h5 {
+            @apply text-[14px] text-gray-500
+        }
+        p {
+            @apply text-base text-gray-500
+        }
+        a {
+            @apply underline
+        }
+        small {
+            @apply text-gray-500
         }
     }
 }
