Improved Tour Page & Added Reservation function

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -28,6 +28,9 @@
         small {
             @apply text-gray-500
         }
+        a {
+            @apply cursor-pointer
+        }
     }
 }
 
