Added host, community, and updated Reserve Page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,16 +17,16 @@
             @apply font-bold text-base
         }
         h4 {
-            @apply font-normal text-base text-gray-500
+            @apply font-normal text-base text-neutral-500
         }
         h5 {
-            @apply text-[14px] text-gray-500
+            @apply text-[14px] text-neutral-500
         }
         p {
-            @apply text-base text-gray-500
+            @apply text-base text-neutral-500
         }
         small {
-            @apply text-gray-500
+            @apply text-neutral-500
         }
         a {
             @apply cursor-pointer
