Optimized Tour data fetching, Updated Tour Inteface

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,6 +31,9 @@
         a {
             @apply cursor-pointer
         }
+        ul {
+            @apply list-inside list-disc
+        }
     }
 }
 
