Updates to app.css and tailwindcss for color consistency.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,22 +17,22 @@
             @apply font-bold text-base
         }
         h4 {
-            @apply font-normal text-base text-neutral-500
+            @apply font-normal text-base text-secondary
         }
         h5 {
-            @apply text-[14px] text-neutral-500
+            @apply text-[14px] text-secondary
         }
         p {
-            @apply text-base text-neutral-500
+            @apply text-base text-secondary
         }
         small {
-            @apply text-neutral-500
+            @apply text-secondary
         }
         a {
             @apply cursor-pointer
         }
         ul {
-            @apply list-inside list-disc text-neutral-500
+            @apply list-inside list-disc text-secondary
         }
     }
 }
