Styling update: remove ul element color, add tailwind color variable.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,7 +32,7 @@
             @apply cursor-pointer
         }
         ul {
-            @apply list-inside list-disc text-secondary
+            @apply list-inside list-disc
         }
     }
 }
